<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sistemascasa.tigie.HeadingsActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorDiverColor"
            android:id="@+id/rlEncabezado"
            android:layout_below="@+id/miActionBar">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cap_01"
                android:id="@+id/ivIconChap"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/idTariffChapter"
                android:layout_alignStart="@+id/idTariffChapter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvCapitulo"
                android:text="@string/idCapitulo"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/ivIconChap"
                android:layout_toEndOf="@+id/ivIconChap"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                style="@style/styleChapitulo"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idTariffChapter"
                android:text="@string/id_chapter"
                android:layout_below="@+id/tvCapitulo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tariffChapterCode"
                android:text="@string/chapter"
                android:textStyle="bold"
                style="@style/styleChapituloCode"
                android:layout_alignTop="@+id/tvCapitulo"
                android:layout_alignLeft="@+id/tvCapitulo"
                android:layout_alignStart="@+id/tvCapitulo"
                android:layout_marginLeft="98dp"
                android:layout_marginStart="98dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignTop="@+id/tvCapitulo"
                android:layout_marginTop="37dp"
                android:layout_alignLeft="@+id/tvCapitulo"
                android:layout_alignStart="@+id/tvCapitulo">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tariffChapterDescription"
                    android:text="@string/chapterDescr"
                    style="@style/styleChapterDescr"/>


            </ScrollView>


        </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPartida"
        android:text="@string/partida"
        android:textStyle="bold"
        style="@style/styleChapituloCode"
        android:gravity="center_vertical"
        android:layout_below="@+id/rlEncabezado"
        android:paddingLeft="@dimen/activity_vertical_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHeadings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvPartida"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingTop="@dimen/padding_top">
    </android.support.v7.widget.RecyclerView>




</RelativeLayout>
