<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:layout_below="@id/miActionBar"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sistemascasa.tigie.settings.ActivityEmail"
        android:background="#FFFEF9">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            />
        <include android:id="@+id/miActionBar"
            layout="@layout/actionbar"
            >
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/miActionBar"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_email"
                android:textColor="@color/colorPrimaryDark4"
                android:textSize="12dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginLeft="0dp"
                android:layout_below="@+id/miActionBar" />

            <View
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FFFEF9"
                android:layout_below="@+id/TextViewTitle"
                />

            <TextView
                android:id="@+id/EmailName"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/e_name"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/space2"/>

            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:hint="@string/email_name"
                android:textColorHint="@color/colorAccent"
                android:textColor="#0EFFFF"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_below="@id/EmailName"
                android:layout_marginBottom="10dp"
                />


            <TextView
                android:id="@+id/alias"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="Ingrese un alias de usuario"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/space2"/>

            <EditText
                android:id="@+id/EditTextAlias"
                android:layout_height="wrap_content"
                android:hint="Ingrese un alias"
                android:textColorHint="@color/colorAccent"
                android:textColor="#0EFFFF"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_below="@id/EmailName"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/EmailPass"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="Contraseña"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/space3"/>


            <EditText
                android:id="@+id/EditTextPass"
                android:layout_height="wrap_content"
                android:hint="Ingrese su contraseña"
                android:textColorHint="@color/colorAccent"
                android:layout_width="fill_parent"
                android:layout_below="@id/EmailPass"
                android:layout_marginBottom="10dp"
                android:inputType="textVisiblePassword"
                />

            <TextView
                android:id="@+id/TextSpinner"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:text="@string/e_spinner"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/space4"/>

            <EditText
                android:id="@+id/EditTextEmail2"
                android:layout_height="wrap_content"
                android:hint="@string/ocupation_name"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent"
                android:layout_below="@id/TextSpinner"
                android:layout_marginBottom="10dp"
                />


            <TextView
                android:id="@+id/TextComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_comment"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/space5"/>

            <EditText
                android:id="@+id/EditTextFeedbackBody"
                android:layout_height="wrap_content"
                android:hint="@string/email_comment"
                android:textColorHint="@color/colorAccent"
                android:inputType="textMultiLine"
                android:layout_width="fill_parent"
                android:layout_below="@id/TextComment"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="wrap_content"
                android:text="Registrarse"
                android:textColor="#3F51B5"
                android:textSize="20dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textStyle="bold"
                android:background="@color/colorDiverColor"
                android:onClick="sendFeedback"
                android:layout_width="fill_parent"
                />

        </LinearLayout>





    </RelativeLayout>
</ScrollView>