<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/cvChapters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/cardview_default_elevation"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/cap_01"
                android:id="@+id/ivIcon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvChapterDesc"
                style="@style/styleChapterDescr"
                android:text="@string/chapterDescr"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tvChapter"
                android:layout_toEndOf="@+id/tvChapter"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"/>


            <TextView
                android:id="@+id/tvChapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter"
                style="@style/styleChapter"
                android:textStyle="bold"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivIcon"
                android:layout_toEndOf="@+id/ivIcon" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_chapter"
                style="@style/styleChapterDescr"
                android:layout_toRightOf="@+id/ivIcon"
                android:layout_toEndOf="@+id/tvChapterDesc"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>


